--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -69,7 +69,7 @@ a {
 	left: 250px;
 	right: 0;
 	height: 60px;
-	background: #673ab7 !important;
+	background: #583196;
 	border-bottom: 1px solid rgb(228 228 228 / 0%);
 	z-index: 10;
 	-webkit-box-shadow: 0 2px 6px 0 rgb(218 218 253 / 65%), 0 0px 6px 0 rgb(206 206 238 / 54%);
@@ -1570,7 +1570,7 @@ feBlend .compose-mail-close:hover {
 }
 
 .bg-gradient-deepblue {
-	background: #6a11cb;
+	background:#412077 ;
 	background: -webkit-linear-gradient(45deg, #6a11cb, #2575fc) !important;
 	background: linear-gradient(45deg, #6a11cb, #2575fc) !important;
 }
@@ -2673,3 +2673,5 @@ input.search-control-2::placeholder {
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
 	filter: alpha(opacity=20)
 }
+
+  
