--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -20,3 +20,96 @@ nav {
     height: 18vw;
     object-fit: cover;
 }
+body {
+	margin: 0; 
+	padding: 0;
+	background: #08091d; 
+    color: #fff;
+
+}
+
+
+.card {
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	/* border-radius: 10px; */
+    color: #08091d;
+  }
+
+
+.container {
+  padding: 2px 16px;
+}
+
+    /* ------------ */
+    section {
+        display: grid;
+        place-items: center;
+        height: 100vh;
+    }
+    .section-header{
+        position: relative;
+        padding-bottom: 10px;
+        text-align: center;
+        font-weight: 900;
+        padding-bottom: 25px;
+        color: #fff;
+    }
+    .section-header:after{
+        content: '';
+        height: 3px;
+        width: 200px;
+        position: absolute;
+        bottom: 0;
+        left: calc(50% - 100px);
+        background: #fff;
+    }
+    .section-header span {
+        display: block;
+        font-size: 15px;
+        font-weight: 300;
+    }
+    .testimonials{
+        max-width: 1000px;
+        padding: 0 15px 50px;
+        margin: 0 auto 80px auto;
+    }
+    .single-item{
+        background: #fff;
+        color: #111;
+        padding: 15px;
+        margin: 20px 15px;
+    }
+    .profile{
+        margin-bottom: 30px;
+        text-align: center;    
+    }
+    .img-area {
+        margin: 0 15px 15px 15px;
+    }
+    .img-area img {
+        height: 200px;
+        width: 200px;
+        border-radius: 50%;
+        border: 7px solid blueviolet;
+    }
+    .content{
+        font-size: 18px;
+    }
+    .content p {
+        text-align: justify;
+    }
+    .content p span {
+        font-size: 48px;
+        margin-right: 20px;
+        color: blueviolet;
+    }
+    .socials i {
+        margin-right: 25px;
+    }
+    .bio h4 {
+        font-family: 'Berkshire Swash', cursive;
+    }
+    .carousel-control-next-icon, .carousel-control-prev-icon {
+        background-color: blueviolet;
+    }
+    
