--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -23,8 +23,8 @@ nav {
 body {
 	margin: 0; 
 	padding: 0;
-	background: #08091d; 
-    color: #fff;
+	background: #d0d1e1; 
+    color: hsl(0, 0%, 0%);
 
 }
 
@@ -52,7 +52,7 @@ body {
         text-align: center;
         font-weight: 900;
         padding-bottom: 25px;
-        color: #fff;
+        color: #080808;
     }
     .section-header:after{
         content: '';
@@ -61,7 +61,7 @@ body {
         position: absolute;
         bottom: 0;
         left: calc(50% - 100px);
-        background: #fff;
+        background: #080808;
     }
     .section-header span {
         display: block;
