--- a/public/assets/css/header-colors.css
+++ b/public/assets/css/header-colors.css
@@ -97,9 +97,9 @@ html.color-sidebar .sidebar-header{
     border-bottom: 1px solid rgb(255 255 255 / 15%);
 	position: absolute;
 }
-html.color-sidebar .logo-icon {
+/* html.color-sidebar .logo-icon {
     filter: invert(1) grayscale(100%) brightness(200%);
-}
+} */
 
 html.color-sidebar .menu-label{
 	color: rgb(255 255 255 / 65%);
