--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -69,7 +69,7 @@ a {
 	left: 250px;
 	right: 0;
 	height: 60px;
-	background:#4d2e8b;
+	background:#5d4c92;
 	/* background-image: url(../images/bg-themes/5.png); */
 	border-bottom: 1px solid rgb(228 228 228 / 0%);
 	z-index: 10;
@@ -1760,7 +1760,7 @@ feBlend .compose-mail-close:hover {
 }
 
 .bg-login {
-	background-image: url(../images/bg-themes/5.png);
+	/* background-image: url(../images/bg-themes/5.png); */
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
