--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -69,7 +69,7 @@ a {
 	left: 250px;
 	right: 0;
 	height: 60px;
-	background:#5d4c92;
+	background:#0e0e0e;
 	/* background-image: url(../images/bg-themes/5.png); */
 	border-bottom: 1px solid rgb(228 228 228 / 0%);
 	z-index: 10;
